--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
   		<footer>
 			<p>Sitio realizado por Monica. Copyright 2025.</p>
 		</footer>
-		<script src="../js/index.js" type="module"></script>
+		<script src="./js/index.js" type="module"></script>
 	</body>
 </html>
